--- a/jivecakeios/Base.lproj/Main.storyboard
+++ b/jivecakeios/Base.lproj/Main.storyboard
@@ -18,9 +18,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GcI-32-IS9">
-                                <rect key="frame" x="164" y="318" width="47" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GcI-32-IS9">
+                                <rect key="frame" x="164" y="328.5" width="47" height="30"/>
                                 <state key="normal" title="Sign In"/>
                                 <connections>
                                     <action selector="onSignInClick" destination="BYZ-38-t0r" eventType="touchUpInside" id="MbM-3b-YUj"/>
@@ -28,6 +27,10 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="GcI-32-IS9" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="ABr-LC-IZJ"/>
+                            <constraint firstItem="GcI-32-IS9" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="tO0-QN-sOt"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
@@ -36,51 +39,136 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-750" y="-881"/>
+            <point key="canvasLocation" x="-1495" y="5"/>
         </scene>
-        <!--Item 1-->
-        <scene sceneID="EWK-ZW-Twv">
+        <!--Transactions-->
+        <scene sceneID="mCR-cj-HuQ">
             <objects>
-                <viewController id="yLd-ez-qek" customClass="TransactionViewController" customModule="jivecakeios" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item 1" id="X7h-EK-WUA"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Z21-67-WwU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController id="NpK-as-2Yf" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Transactions" id="rpN-lR-auX"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="wxW-4M-D1z">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="H4f-N6-Kud" kind="relationship" relationship="rootViewController" id="nyF-DM-nR5"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ftC-ds-RDc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="281" y="78"/>
+            <point key="canvasLocation" x="14" y="5"/>
         </scene>
-        <!--Item-->
-        <scene sceneID="Q4E-dp-Ntb">
+        <!--View Controller-->
+        <scene sceneID="IlV-kD-SJf">
             <objects>
-                <viewController id="fvb-SV-9eZ" customClass="QRCodeScannerViewController" customModule="jivecakeios" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="dhs-PC-gg6">
+                <viewController id="MEP-uI-nHg" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="taf-ak-5WJ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="qgp-D9-nPs"/>
+                        <viewLayoutGuide key="safeArea" id="B17-2O-YLF"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="AY2-ue-TfR"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="WmY-dJ-TDu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FdR-KF-I8B" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1154" y="78"/>
+            <point key="canvasLocation" x="1527" y="5"/>
+        </scene>
+        <!--Transaction View Controller-->
+        <scene sceneID="PWK-iF-zNW">
+            <objects>
+                <tableViewController id="H4f-N6-Kud" customClass="TransactionViewController" customModule="jivecakeios" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="AME-tj-I0a">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="5BI-GI-oKM">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="H4f-N6-Kud" id="pzS-nZ-HEX"/>
+                            </connections>
+                        </searchBar>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="transactionRowTableCell" id="BtE-Jt-vO1" customClass="TransactionRowTableCell" customModule="jivecakeios" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="72" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" preservesSuperviewLayoutMargins="YES" layoutMarginsFollowReadableWidth="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="BtE-Jt-vO1" id="iHA-FU-xco">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="S1e-Et-urx">
+                                            <rect key="frame" x="87" y="-34" width="375" height="44"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" distribution="fillEqually" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="XfL-O6-jis">
+                                                    <rect key="frame" x="0.0" y="0.0" width="187.5" height="44"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Transaction" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ch2-g6-in2">
+                                                            <rect key="frame" x="0.0" y="0.0" width="89.5" height="22"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Item" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aQ5-fK-IJR">
+                                                            <rect key="frame" x="0.0" y="22" width="34" height="22"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="95Y-Og-lGg">
+                                                    <rect key="frame" x="187.5" y="0.0" width="187.5" height="44"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="S1e-Et-urx" firstAttribute="width" secondItem="iHA-FU-xco" secondAttribute="width" id="cFW-zT-jaC"/>
+                                        <constraint firstItem="S1e-Et-urx" firstAttribute="height" secondItem="iHA-FU-xco" secondAttribute="height" id="qLM-KL-3R2"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="amount" destination="95Y-Og-lGg" id="BLB-Uw-jQ7"/>
+                                    <outlet property="item" destination="aQ5-fK-IJR" id="7QR-uI-8nM"/>
+                                    <outlet property="transactionText" destination="ch2-g6-in2" id="FQb-Yp-6a3"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="H4f-N6-Kud" id="9R9-7Y-rw2"/>
+                            <outlet property="delegate" destination="H4f-N6-Kud" id="wjm-P3-emA"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="yt5-Af-wLK"/>
+                    <connections>
+                        <segue destination="MEP-uI-nHg" kind="show" identifier="selectTranscation" id="5tY-pG-aea"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="t0V-vO-f6Z" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="772" y="5"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="1BC-9h-Naf">
             <objects>
                 <tabBarController id="tFZ-l0-41e" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="r4e-9D-Wed"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="BF4-Ej-f0m">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="yLd-ez-qek" kind="relationship" relationship="viewControllers" id="5Zm-G0-pFs"/>
-                        <segue destination="fvb-SV-9eZ" kind="relationship" relationship="viewControllers" id="ovi-ps-axc"/>
+                        <segue destination="NpK-as-2Yf" kind="relationship" relationship="viewControllers" id="PPg-sZ-0zt"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qNf-wu-y4T" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="281" y="-881"/>
+            <point key="canvasLocation" x="-735" y="5"/>
         </scene>
     </scenes>
 </document>
