--- a/jivecakeios/Base.lproj/Main.storyboard
+++ b/jivecakeios/Base.lproj/Main.storyboard
@@ -81,10 +81,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <searchBar key="tableHeaderView" contentMode="redraw" id="5BI-GI-oKM">
+                        <searchBar key="tableHeaderView" contentMode="redraw" searchBarStyle="minimal" id="5BI-GI-oKM">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            <textInputTraits key="textInputTraits"/>
+                            <textInputTraits key="textInputTraits" returnKeyType="done"/>
                             <connections>
                                 <outlet property="delegate" destination="H4f-N6-Kud" id="pzS-nZ-HEX"/>
                             </connections>
